--- a/css/master.css
+++ b/css/master.css
@@ -86,6 +86,7 @@ button {
   border: none;
   font-weight: 900;
   box-shadow: 6px 6px 6px #1c1f26, -12px -6px 6px #3d4456;
+  transition: all 1s;
 }
  button:hover{
     color: #fff;
