--- a/css/master.css
+++ b/css/master.css
@@ -23,7 +23,7 @@ body {
 
 
 .container{
-  width: 950px;
+  width: 1100px;
   border-radius: 20px;
   padding: 40px;
   box-sizing: border-box;
@@ -46,7 +46,14 @@ body {
 
   margin: 0 30px;
 }
-
+.rd{
+  font-size: 10px;
+}
+.gr{
+  
+  width: 30px;
+  height: 30px;
+}
 input::placeholder {
   color: gray;
 }
@@ -95,3 +102,16 @@ button {
     box-shadow: inset 4px 4px 10px -1px #3d4456,
        inset -4px -4px 10px -1px #1c1f26;
  }
+/*
+span{
+  position:absolute;
+  top: 300px;
+  left: 230px;
+  width: 10%;
+  height: 10%;
+  background-color:#fe0000;
+}
+
+.gr{
+  z-index: 1,;
+}
